<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.romiis</groupId>
    <artifactId>equalLibTestApp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>equalLibTestApp</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.2</junit.version>
    </properties>

    <dependencies>
        <!-- Lombok Dependency -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>
        <!-- Other dependencies -->
        <dependency>
            <groupId>org.eclipse.jdt</groupId>
            <artifactId>ecj</artifactId>
            <version>3.33.0</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>17.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.16</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-reload4j</artifactId>
            <version>2.0.16</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.reload4j</groupId>
            <artifactId>reload4j</artifactId>
            <version>1.2.25</version>
        </dependency>
        <dependency>
            <groupId>com.jcabi</groupId>
            <artifactId>jcabi-log</artifactId>
            <version>0.17.1</version>
        </dependency>
        <dependency>
            <groupId>com.romiis</groupId>
            <artifactId>EqualLib</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.18.2</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <!-- Default resources from src/main/resources -->
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <!-- Include the "objects" directory from the content root -->
            <resource>
                <directory>objects</directory>
                <targetPath>objects</targetPath>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.34</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- JavaFX Maven Plugin -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <goals>
                            <goal>jlink</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <mainClass>com.romiis.equallibtestapp.MainClass</mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <options>
                                <option>--add-opens=java.base/java.util=com.romiis.equallibtestapp</option>
                                <option>--add-opens=java.base/java.lang=com.romiis.equallibtestapp</option>
                                <option>--add-opens=java.base/java.security=com.romiis.equallibtestapp</option>
                                <option>--add-opens=java.base/java.util.concurrent=com.romiis.equallibtestapp</option>
                                <option>--add-opens=java.base/java.io=com.romiis.equallibtestapp</option>
                                <option>--add-opens=java.base/jdk.internal.reflect=com.romiis.equallibtestapp</option>
                                <option>--add-opens=java.base/java.lang.ref=com.romiis.equallibtestapp</option>
                                <option>--add-opens=java.base/jdk.internal.misc=com.romiis.equallibtestapp</option>
                                <option>--add-opens=java.base/java.util=EqualLib</option>
                                <option>--add-opens=java.base/java.lang=EqualLib</option>
                                <option>--add-opens=java.base/java.security=EqualLib</option>
                                <option>--add-opens=java.base/java.util.concurrent=EqualLib</option>
                                <option>--add-opens=java.base/java.io=EqualLib</option>
                                <option>--add-opens=java.base/jdk.internal.reflect=EqualLib</option>
                                <option>--add-opens=java.base/java.lang.ref=EqualLib</option>
                                <option>--add-opens=java.base/jdk.internal.misc=EqualLib</option>
                            </options>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <!-- Run after jlink (which typically binds to the package or install phase) -->
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <copy todir="${project.build.directory}/app/bin/objects">
                                    <fileset dir="${basedir}/objects" includes="**/*"/>
                                </copy>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>




        </plugins>
    </build>
</project>
